@@ -10,7 +10,7 @@ typedef  unsigned short u16;
 #define  TCB_STATE_RUN  0
 #define  NR_TASKS  16
 
-struct tcb {
+__xdata struct tcb {
   u8 state;
   u8 thread_id;
   int  *wait;
@@ -64,4 +64,3 @@ void testBug(void)
   ASSERT( delay_next[ 8] == NULL_IDX );
 #endif
 }
-
